Closed Bug 29641 Opened 26 years ago Closed 25 years ago

Layout for pages with long text is very slow

Categories

(Core :: Layout, defect, P3)

x86
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: leger, Assigned: waterson)

References

()

Details

(Keywords: perf, relnote, Whiteboard: [nsbeta2-][nsbeta3+] FIX IN HAND)

Attachments

(1 file)

Per results on the long page testcase posted internally at: http://slip/paulw/textlong/text-long.html (I will look for external posting) seamonkey takes excessively longer than 4.72 to load the page. Results: WinNT 4.0 - 4.72/8.64sec, Seamonkey/19.09sec Win 98 - 4.72/54.03sec, Seamonkey/1min 20.02sec Win95 - 4.72/23.77sec, Seamonkey/43.57sec Mac 8.5 - 4.72/58.41sec , Seamonkey/2min 4.91sec Mac 9.0 - 4.72/47.97sec , Seamonkey/1min 35.29sec Linux redhat 6.1 - 4.72/1min 46.06sec , Seamonkey/2min 70.21sec
adding beta1 and perf keywords
Keywords: beta1, perf
This should not be something we're considering for beta1.
Putting on PDT- for beta1. Will release note.
Keywords: relnote
Whiteboard: [PDT-]
*** Bug 25734 has been marked as a duplicate of this bug. ***
An external URL (or attached test case) would help greatly. I was trying to look at this with Johnny Stenback (who's outside the firewall) and he couldn't get to it.
Changing the URL field from the internal http://slip/paulw/textlong/text-long.html to an external URL. I imported it from duplicate bug 25734, it's a >9MB file containing lots of text.
Changing the URL back to what it was. The new URL (compaq site) is on a very slow server, it's 50% larger document, and it's not all text so it is not a suitable replacement
Added keyword nsbeta2.
Keywords: nsbeta2
Whiteboard: [PDT-]
Putting on [nsbeta2-] radar.
Whiteboard: [nsbeta2-]
reassigned to me
Assignee: troy → buster
Target Milestone: --- → M18
Status: NEW → ASSIGNED
Priority: P3 → P1
dbaron & I have made some big changes that may affect this. I'll take the bug for now...
Assignee: buster → waterson
Status: ASSIGNED → NEW
Nominating for nsbeta3 review as a perf bug. The UE when this bug occurs is quite painful--initial page layout took 105s on my WinNT 4.0 SP4 with a P2-300 and 256M RAM, and the browser freezes for a long time during initial layout. (In fact, it seemed to seize control of the cursor so I couldn't remove the cursor from the browser window and had to CTRL-ALT-DEL and Cancel to regain the ability to put the cursor outside the browser window; but the browser itself hadn't crashed and finished the layout operation successfully.) If the problem is truly specific to documents that have "long text" and we lack evidence for actual popular pages on the web that are causing this, it could be FUTUREd.
Keywords: nsbeta3
[nsbeta3+].
Whiteboard: [nsbeta2-] → [nsbeta2-][nsbeta3+]
*** Bug 21637 has been marked as a duplicate of this bug. ***
The next thing that we should do is remove the "backoff count". On large documents, this stifles reflows after a certain point, and ends up getting layout into a situation where it must synchronously reflow thousands and thousands of frames. nisheeth, vidur, or jst, could you r=? (After which I'll make the bug [nsbeta3-] and future it -- I'm sure there is still plenty of evaluation that could go on here.)
Status: NEW → ASSIGNED
Whiteboard: [nsbeta2-][nsbeta3+] → [nsbeta2-][nsbeta3+] FIX IN HAND
Priority: P1 → P3
r=nisheeth. I suggest that you run this change by vidur also because he implemented the backoff count.
Did the fix vidur suggested, which was to just pick a really big default value for the backoff count. I'm going to mark this bug fixed, as it solves the problem ekrock rants about, above. Of course, there is always room for performance improvement, so I'd like to deal with those as we identify areas for enhancement.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Sorry, but this bug is not fixed yet. I tried creating an attachment but it gave me an error, so try a long detailed bugzilla bug list(>1MB) and save it to disk, then reload from disk. On win98 it takes more than about 90 seconds on Mozilla, compared to less than 5 seconds on IE and Netscape.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
niv: read the last comment. file a new bug.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Marking verified per last comments of waterson.
Status: RESOLVED → VERIFIED
*** Bug 26028 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: