Bug 29641. Set default content.notify.backoffcount to -1 (never). This doesn't really 'fix' the bug; however, it keeps us from getting into a situation where layout gets too much content crammed down its throat at once. r=vidur,nisheeth